name:                persistent-tx-utils
version:             0.1.1.0
synopsis:            Utilities for Datbase.Persist
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

library
  hs-source-dirs:      .
  exposed-modules:     Database.Persist.TX.Utils
                       Database.Persist.TX.Utils.Postgres

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , classy-prelude-conduit
                     , containers
                     , text
                     , time
                     , persistent
                     , mtl
                     , transformers
                     , monad-logger
                     , deepseq
                     , aeson
                     , conduit

  default-language:    Haskell2010

  default-extensions:
              TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              FlexibleInstances
              EmptyDataDecls
              NoMonomorphismRestriction
              DeriveDataTypeable
              ViewPatterns
              TupleSections
              RecordWildCards
              RankNTypes
              DeriveGeneric
              PartialTypeSignatures
              CPP
              ConstraintKinds

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0 -j
  else
      ghc-options:   -O2

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures +RTS -A128m -n2m -RTS
