name:                persistent-tx-utils
version:             0.1.19.0
synopsis:            Utilities for Datbase.Persist
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

library
  hs-source-dirs:      .
  exposed-modules:     Database.Persist.TX.Utils
                       Database.Persist.TX.Utils.Esqueleto
                       Database.Persist.TX.Utils.Dummy
                       Database.Persist.TX.Utils.Orphans
                       Database.Persist.TX.Utils.Postgres

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , classy-prelude-conduit
                     , containers
                     , text
                     , time
                     , esqueleto
                     , persistent
                     , persistent-template
                     , mtl
                     , transformers
                     , monad-logger
                     , deepseq
                     , aeson
                     , conduit
                     , postgresql-simple
                     , template-haskell
                     , monad-control
                     , bytestring
                     , uuid
                     , path-pieces
                     , filepath
                     , safe-exceptions
                     , unliftio

  default-language:    Haskell2010

  default-extensions:
              TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              FlexibleInstances
              EmptyDataDecls
              NoMonomorphismRestriction
              DeriveDataTypeable
              ViewPatterns
              TupleSections
              RecordWildCards
              RankNTypes
              DeriveGeneric
              PartialTypeSignatures
              CPP
              ConstraintKinds
              DerivingStrategies
              StandaloneDeriving
              DataKinds
              TypeOperators

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0 -j
  else
      ghc-options:   -O2

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures
  if flag(dev)
      ghc-options: +RTS -A128m -n2m -RTS


test-suite persistent-tx-utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , persistent-tx-utils
                     , hspec
                     , QuickCheck
                     , filepath

  other-modules:       Database.Persist.TX.UtilsSpec

  default-language:    Haskell2010

  default-extensions:
              TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              FlexibleInstances
              EmptyDataDecls
              NoMonomorphismRestriction
              DeriveDataTypeable
              ViewPatterns
              TupleSections
              RecordWildCards
              RankNTypes
              DeriveGeneric
              PartialTypeSignatures
              CPP
              ConstraintKinds

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0 -j
  else
      ghc-options:   -O2

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures
  if flag(dev)
      ghc-options: +RTS -A128m -n2m -RTS

